--- a/templates/table.html
+++ b/templates/table.html
@@ -11,13 +11,13 @@
   <thead>
     <tr class="table-success">
       <th scope="col" class="text-center">#</th>
-      <th scope="col" class="text-center" >Dzielnica</th>
+      <th scope="col" class="text-center">Dzielnica</th>
       <th scope="col" class="text-center">Średnia cena za m2</th>
-      <th scope="col" class="text-center">Zmiana średniej ceny tydzień/tydzień</th>
+      <th scope="col" class="text-center">Tygodniowa zmiana</th>
       <th scope="col" class="text-center">Średnia cena</th>
       <th scope="col" class="text-center">Średnia powierzchnia</th>
       <th scope="col" class="text-center">Liczba ogłoszeń</th>
-      <th scope="col" class="text-center">Liczba ogłoszeń tydzien/tydzien</th>
+      <th scope="col" class="text-center">Tygodniowa zmiana</th>
     </tr>
   </thead>
 
