--- a/templates/base.html
+++ b/templates/base.html
@@ -26,9 +26,9 @@
     <div class="header text-center">
         <div class="my-navbar">
             <div id="hide-warszawa">
-                <a class="a-left" href="#">Działki</a>
-                <a class="a-left" href="#">Domy</a>
-                <a class="a-left"  href="#">Mieszkania</a>
+                <a class="a-left" href="{{ url_for('warszawa_land') }}">Działki</a>
+                <a class="a-left" href="{{ url_for('warszawa_house') }}">Domy</a>
+                <a class="a-left"  href="{{ url_for('warszawa_flat') }}">Mieszkania</a>
             </div>
             <a class="a-left" id="hide-main-warszawa" href="#">Warszawa</a>
             <div class="main-menu">
@@ -36,9 +36,9 @@
             </div>
         <a class="a-left a-right" id="hide-main-krakow" href="#">Kraków</a>
             <div id="hide-krakow">
-                <a class="a-left a-right"  href="#">Mieszkania</a>
-                <a class="a-left a-right" href="#">Domy</a>
-                <a class="a-left a-right" href="#">Działki</a>
+                <a class="a-left a-right"  href="{{ url_for('krakow_flat') }}">Mieszkania</a>
+                <a class="a-left a-right" href="{{ url_for('krakow_house') }}">Domy</a>
+                <a class="a-left a-right" href="{{ url_for('krakow_land') }}">Działki</a>
             </div>
         </div>
         <div class="header-border"></div>
