--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,19 @@
   <header>
       <div class="row ml-5">
           <div class="col-1">
+              {% if city == 'krakow' %}
               <h1 class="roar">Kraków</h1></div>
+          {% else %}
+          <h1 class="roar">Warszawa</h1></div>
+      {% endif %}
           <div class="col-5 more-padding">
+              {% if (house == True) and (land == True) %}
+              <h1>Działki</h1>
+              {% elif (house == True) and (land == False) %}
+              <h1>Domy</h1>
+              {% else %}
               <h1>Mieszkania</h1>
+              {% endif %}
               </div>
           <div class="col-6 mt-5">
       <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
@@ -67,7 +77,7 @@
       {{ form.submit(class="btn btn-success btn-md ml-5") }}
         </div>
         <div class="col-1-25">
-        <a href="{{url_for('krakow')}}" class="btn btn-outline-primary ml-5" id="reset-page-form">Reset</a>
+        <a href="{{url_for('krakow_flat')}}" class="btn btn-outline-primary ml-5" id="reset-page-form">Reset</a>
         </div></div>
         </form>
 
