form eng but not working, rest o f languages working

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
 
         {% endblock %}
 
-        <title>Your page title</title>
+        <title>Poland stats</title>
         <!-- Latest compiled and minified CSS -->
 
         {% endblock %}
