--- a/templates/main_stats_eng.html
+++ b/templates/main_stats_eng.html
@@ -10,9 +10,9 @@
       <div class="card-header yellow-triad-color">
       <h3>{{ "{:,}".format(data[2][0][0]|int)}} zł </h3>
           {% if data[2][0]|length == 3 %}
-          <h5 class="gray-font-color"> Średnia cena za m2</h5>
+          <h5 class="gray-font-color">Average price for square meter</h5>
           {% else %}
-      <h5 class="gray-font-color"> Średnia cena wynajmu bez czynszu</h5>
+      <h5 class="gray-font-color">Average price of rent for square meter</h5>
           {% endif %}
       </div>
     </div>
@@ -35,7 +35,7 @@
     <div class=" card-body text-center d-flex align-items-center justify-content-center">
       <div class="card-header yellow-triad-color">
           <div class="text-center text-primary d-flex justify-content-center align-items-center font-italic">
-              <h4>Tygodniowe statystki</h4>
+              <h4>Weekly statistics</h4>
           </div>
       </div>
     </div>
@@ -48,7 +48,7 @@
      {% else %}
         <h4>{{ data[2][0][1] }}</h4>
      {% endif %}
-        <h5 class="gray-font-color">Ilość ogłoszeń</h5>
+        <h5 class="gray-font-color">Advertisement quantity</h5>
       </div>
     </div>
           </div>
