--- a/templates/table_eng.html
+++ b/templates/table_eng.html
@@ -11,13 +11,13 @@
   <thead>
     <tr class="table-success">
       <th scope="col" class="text-center">#</th>
-      <th scope="col" class="text-center">Dzielnica</th>
-      <th scope="col" class="text-center">Średnia cena za m2</th>
-      <th scope="col" class="text-center">Tygodniowa zmiana</th>
-      <th scope="col" class="text-center">Średnia cena</th>
-      <th scope="col" class="text-center">Średnia powierzchnia</th>
-      <th scope="col" class="text-center">Liczba ogłoszeń</th>
-      <th scope="col" class="text-center">Tygodniowa zmiana</th>
+      <th scope="col" class="text-center">District</th>
+      <th scope="col" class="text-center">Average price for m2</th>
+      <th scope="col" class="text-center">Weekly change</th>
+      <th scope="col" class="text-center">Average price</th>
+      <th scope="col" class="text-center">Average area</th>
+      <th scope="col" class="text-center">Advertisement quantity</th>
+      <th scope="col" class="text-center">Weekly change</th>
     </tr>
   </thead>
 
