--- a/templates/container_bar_pie_sell_eng.html
+++ b/templates/container_bar_pie_sell_eng.html
@@ -1,63 +1,111 @@
 <div class="container">
-<div class="card-group mt-5 text-primary">
 
-  <!-- Card with average prices -->
-  <div class="card glass-morph-color">
-    <div class="card-body text-center ">
-      <div class="card-header">
-        {% if data[2][0]|length == 3 %}
-      <h4>Average price for square meter</h4>
-        {% else %}
-        <h4>Average price of rent for square meter</h4>
-        {% endif %}
+  <!-- Only for flats where we don't have data outside the city -->
+  {% if house == False %}
+
+  <div class="card-group mt-5 text-primary">
+
+    <!-- Card with average prices -->
+    <div class="card glass-morph-color">
+      <div class="card-body text-center ">
+        <div class="card-header">
+          {% if data[2][0]|length == 3 %}
+          <h4>Average price for square meter</h4>
+          {% else %}
+          <h4>Average price of rent for square meter</h4>
+          {% endif %}
+        </div>
+        {% include 'bar_avg_price.html'%}
       </div>
-      {% include 'bar_avg_price.html'%}
+    </div>
+
+    <!-- Card with pie chart -->
+    <div class="card glass-morph-color">
+      <div class="card-body text-center">
+        <div class="card-header">
+          <h4>Advertisement quantity</h4>
+        </div>
+        {% include 'pie_ads_number.html'%}
+      </div>
+    </div>
+
+    <!-- end of card group -->
+  </div>
+
+  <!-- Data for both in the city and outside for houses and land -->
+  {% else %}
+
+
+  <div class="gallery js-flickity">
+    <div class="gallery-cell">
+
+      <!-- New gallery cell for carousel. This is fetching outside the city -->
+
+      <div class="card-group mt-5 text-primary">
+
+        <!-- Card with average prices -->
+        <div class="card glass-morph-color">
+          <div class="card-body text-center ">
+            <div class="card-header">
+              {% if data[2][0]|length == 3 %}
+              <h4>Average price for square meter</h4>
+              {% else %}
+              <h4>Average price of rent for square meter</h4>
+              {% endif %}
+            </div>
+            {% include 'bar_avg_price.html'%}
+          </div>
+        </div>
+
+        <!-- Card with pie chart -->
+        <div class="card glass-morph-color">
+          <div class="card-body text-center">
+            <div class="card-header">
+              <h4>Advertisement quantity</h4>
+            </div>
+            {% include 'pie_ads_number.html'%}
+          </div>
+        </div>
+
+        <!-- end of card group -->
+      </div>
+    </div>
+
+    <!-- New gallery cell for carousel. This is fetching outside the city -->
+
+    <div class="gallery-cell">
+      <div class="card-group mt-5 text-primary">
+
+        <!-- Card with average prices -->
+        <div class="card glass-morph-color">
+          <div class="card-body text-center ">
+            <div class="card-header">
+              {% if data[2][0]|length == 3 %}
+              <h4>Average price for square meter</h4>
+              {% else %}
+              <h4>Average price of rent for square meter</h4>
+              {% endif %}
+            </div>
+            {% include 'bar_avg_price_out.html'%}
+          </div>
+        </div>
+
+        <!-- Card with pie chart -->
+        <div class="card glass-morph-color">
+          <div class="card-body text-center">
+            <div class="card-header">
+              <h4>Advertisement quantity</h4>
+            </div>
+            {% include 'pie_ads_number_out.html'%}
+          </div>
+        </div>
+
+        <!-- end of card group -->
+      </div>
     </div>
   </div>
 
-  <!-- Card with pie chart -->
-  <div class="card glass-morph-color">
-    <div class="card-body text-center">
-      <div class="card-header">
-        <h4>Advertisements quantity</h4>
-      </div>
-    {% include 'pie_ads_number.html'%}
-    </div>
-  </div>
 
-  <!-- end of card group -->
-</div>
-
-{% if house == True %}
-
-<div class="card-group mt-5 text-primary">
-
-  <!-- Card with average prices -->
-  <div class="card glass-morph-color">
-    <div class="card-body text-center ">
-      <div class="card-header">
-        {% if data[2][0]|length == 3 %}
-        <h4>Average price of rent for square meter</h4>
-        {% else %}
-        <h4>Average price of rent for square meter</h4>
-        {% endif %}
-      </div>
-      {% include 'bar_avg_price_out.html'%}
-    </div>
-  </div>
-
-  <!-- Card with pie chart -->
-  <div class="card glass-morph-color">
-    <div class="card-body text-center">
-      <div class="card-header">
-        <h4>Advertisements quantity</h4>
-      </div>
-      {% include 'pie_ads_number_out.html'%}
-    </div>
-  </div>
-
-  <!-- end of card group -->
-</div>
-{% endif %}
+  {% endif %}
 
 </div>
