--- a/templates/container_bar_pie_sell.html
+++ b/templates/container_bar_pie_sell.html
@@ -2,8 +2,7 @@
 
   <!-- Only for flats where we don't have data outside the city -->
   {% if house == False %}
-
-<div class="card-group mt-5 text-primary">
+<div class="card-group text-primary mt-5">
 
   <!-- Card with average prices -->
   <div class="card glass-morph-color">
@@ -41,7 +40,8 @@
 
     <!-- New gallery cell for carousel. This is fetching outside the city -->
 
-   <div class="card-group mt-5 text-primary">
+    <div class="card-header-custom text-center mt-5 yellow-triad-color"><h4>Miasto</h4></div>
+   <div class="card-group text-primary">
 
   <!-- Card with average prices -->
   <div class="card glass-morph-color">
@@ -74,7 +74,8 @@
    <!-- New gallery cell for carousel. This is fetching outside the city -->
 
   <div class="gallery-cell">
-    <div class="card-group mt-5 text-primary">
+    <div class="card-header-custom text-center mt-5 yellow-triad-color"><h4>Obszary podmiejskie</h4></div>
+    <div class="card-group text-primary">
 
       <!-- Card with average prices -->
       <div class="card glass-morph-color">
