--- a/templates/container_bar_pie_sell_eng.html
+++ b/templates/container_bar_pie_sell_eng.html
@@ -41,7 +41,8 @@
 
       <!-- New gallery cell for carousel. This is fetching outside the city -->
 
-      <div class="card-group mt-5 text-primary">
+      <div class="card-header-custom text-center mt-5 yellow-triad-color"><h4>City center</h4></div>
+      <div class="card-group text-primary">
 
         <!-- Card with average prices -->
         <div class="card glass-morph-color">
@@ -74,7 +75,8 @@
     <!-- New gallery cell for carousel. This is fetching outside the city -->
 
     <div class="gallery-cell">
-      <div class="card-group mt-5 text-primary">
+      <div class="card-header-custom text-center mt-5 yellow-triad-color mt-5"><h4>Suburban areas</h4></div>
+      <div class="card-group text-primary">
 
         <!-- Card with average prices -->
         <div class="card glass-morph-color">
