--- a/templates/bar_avg_price_out.html
+++ b/templates/bar_avg_price_out.html
@@ -53,10 +53,14 @@ var chartData = [
         majorTickLines: { width: 0 },
         minorTickLines: { width: 0 },
         minimum: 0,
-        {% if data[2][0]|length == 3 %}
-        maximum: {{ data[4][0][1] }},
+        {% if data[4]|length == 0 %}
+            maximum: 0,
         {% else %}
-        maximum: {{ data[4][0][1]/data[4][0][2] }},
+            {% if data[2][0]|length == 3 %}
+            maximum: {{ data[4][0][1] }},
+            {% else %}
+            maximum: {{ data[4][0][1]/data[4][0][2] }},
+            {% endif %}
         {% endif %}
 
         interval: 5000,
