small bugs fixed

--- a/templates/main_stats_eng.html
+++ b/templates/main_stats_eng.html
@@ -12,7 +12,7 @@
           {% if data[2][0]|length == 3 %}
           <h5 class="gray-font-color">Average price for square meter</h5>
           {% else %}
-      <h5 class="gray-font-color">Average price of rent for square meter</h5>
+      <h5 class="gray-font-color">Average price of rent without council tax</h5>
           {% endif %}
       </div>
     </div>
